--- a/DevilHouse/Main.storyboard
+++ b/DevilHouse/Main.storyboard
@@ -573,7 +573,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l2Q-Y2-oSB">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l2Q-Y2-oSB">
                                 <rect key="frame" x="95" y="90.5" width="410" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="410" id="ffX-RL-0H2"/>
