--- a/DevilHouse/Main.storyboard
+++ b/DevilHouse/Main.storyboard
@@ -1060,7 +1060,6 @@
                             </label>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dtI-6A-0bv">
                                 <rect key="frame" x="325" y="265" width="120" height="70"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="4Wt-4r-Dj0"/>
                                     <constraint firstAttribute="width" constant="120" id="c7Z-MU-ayx"/>
@@ -1073,7 +1072,6 @@
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81C-j8-Ak3">
                                 <rect key="frame" x="155" y="264" width="120" height="70"/>
-                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="2r9-Ug-DBb"/>
                                     <constraint firstAttribute="width" constant="120" id="3aP-bS-3hb"/>
@@ -1155,7 +1153,6 @@
                             </label>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Jx-Bf-kKE">
                                 <rect key="frame" x="325" y="175" width="120" height="70"/>
-                                <color key="backgroundColor" red="0.60000002384185791" green="0.40000000596046448" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="d95-Gr-doP"/>
                                     <constraint firstAttribute="width" constant="120" id="iph-Q4-xuV"/>
@@ -1168,7 +1165,6 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lus-Y7-Xt4">
                                 <rect key="frame" x="155" y="85" width="120" height="70"/>
-                                <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="CfZ-7D-Jbz"/>
                                     <constraint firstAttribute="width" constant="120" id="tJC-FQ-GEg"/>
@@ -1181,7 +1177,6 @@
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Thg-xn-7qJ">
                                 <rect key="frame" x="155" y="175" width="120" height="70"/>
-                                <color key="backgroundColor" red="0.60000002384185791" green="0.40000000596046448" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="VWV-EJ-aLV"/>
                                     <constraint firstAttribute="height" constant="70" id="kfQ-kO-Z5a"/>
@@ -1198,9 +1193,7 @@
                                     <constraint firstAttribute="height" constant="70" id="8l4-r6-Nf7"/>
                                     <constraint firstAttribute="width" constant="120" id="Mn1-7s-glR"/>
                                 </constraints>
-                                <state key="normal" title="勇者の盾">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
+                                <state key="normal" title="勇者の盾"/>
                                 <connections>
                                     <action selector="choiceProtect:" destination="ofN-ed-5cn" eventType="touchUpInside" id="dTa-H5-D9a"/>
                                 </connections>
@@ -1240,15 +1233,12 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yhF-d1-V4g">
                                 <rect key="frame" x="325" y="85" width="120" height="70"/>
-                                <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="62K-bm-FpO"/>
                                     <constraint firstAttribute="height" constant="70" id="8Iv-4H-Uuu"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="木の盾">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
+                                <state key="normal" title="木の盾"/>
                                 <connections>
                                     <action selector="choiceProtect:" destination="ofN-ed-5cn" eventType="touchUpInside" id="Pa5-AM-7eZ"/>
                                 </connections>
