--- a/DevilHouse/Main.storyboard
+++ b/DevilHouse/Main.storyboard
@@ -1804,8 +1804,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="haikei.png" translatesAutoresizingMaskIntoConstraints="NO" id="K4j-O7-AHM">
-                                <rect key="frame" x="93" y="-68" width="414" height="736"/>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" image="haikei.png" translatesAutoresizingMaskIntoConstraints="NO" id="K4j-O7-AHM">
+                                <rect key="frame" x="93" y="-67" width="414" height="736"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wEV-EW-7GL">
                                 <rect key="frame" x="40" y="40" width="30" height="30"/>
@@ -1814,25 +1814,37 @@
                                     <action selector="exitButtom:" destination="Q2a-yz-wKP" eventType="touchUpInside" id="kBV-iR-3g6"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ViO-wm-BKH">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ViO-wm-BKH">
                                 <rect key="frame" x="282" y="285" width="37" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Skill3"/>
+                                <connections>
+                                    <action selector="equipmentSkillButton:" destination="Q2a-yz-wKP" eventType="touchUpInside" id="5x5-6i-Nca"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCz-Lv-OD2">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCz-Lv-OD2">
                                 <rect key="frame" x="281" y="355" width="38" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Skill4"/>
+                                <connections>
+                                    <action selector="equipmentSkillButton:" destination="Q2a-yz-wKP" eventType="touchUpInside" id="xac-ce-smd"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6T6-nl-nU9">
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6T6-nl-nU9">
                                 <rect key="frame" x="282" y="425" width="37" height="30"/>
                                 <color key="backgroundColor" red="0.60000002384185791" green="0.40000000596046448" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Skill5"/>
+                                <connections>
+                                    <action selector="equipmentSkillButton:" destination="Q2a-yz-wKP" eventType="touchUpInside" id="gtT-nR-m8U"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GjU-83-xDN">
                                 <rect key="frame" x="283" y="145" width="35" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Skill1"/>
+                                <connections>
+                                    <action selector="equipmentSkillButton:" destination="Q2a-yz-wKP" eventType="touchUpInside" id="MNp-7R-M2x"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0xm-gN-fIX">
                                 <rect key="frame" x="279" y="50" width="42" height="21"/>
@@ -1840,10 +1852,13 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTd-DQ-g9X">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTd-DQ-g9X">
                                 <rect key="frame" x="282" y="215" width="37" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Skill2"/>
+                                <connections>
+                                    <action selector="equipmentSkillButton:" destination="Q2a-yz-wKP" eventType="touchUpInside" id="8kE-oI-Wxy"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1880,10 +1895,17 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="skillButton0" destination="GjU-83-xDN" id="uDd-Np-w44"/>
+                        <outlet property="skillButton1" destination="BTd-DQ-g9X" id="Vjt-tM-Uf6"/>
+                        <outlet property="skillButton2" destination="ViO-wm-BKH" id="EKL-Zc-Kes"/>
+                        <outlet property="skillButton3" destination="CCz-Lv-OD2" id="2ZN-jf-ht7"/>
+                        <outlet property="skillButton4" destination="6T6-nl-nU9" id="sAw-xr-bIX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GDR-n6-S2N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-889" y="1426"/>
+            <point key="canvasLocation" x="-629" y="1264"/>
         </scene>
     </scenes>
     <resources>
